# conventional-commit-helper

./: .gitignore  Cargo.toml  README.md  flake.nix
.dev/: conventional-commit-helper.toml
.github/workflows/: nix-flake-check.yml
docs/: SAMPLE.md
src/: cache.rs  commit_scopes.rs  commit_types.rs  config.rs  lib.rs  main.rs  utils.rs
src/commit_scopes/: commit.rs  distance.rs  mod.rs
tests/: cli.rs
